fix mute controls buttons tooltips hiding behind issue

--- a/packages/client-core/src/components/ConferenceMode/index.module.scss
+++ b/packages/client-core/src/components/ConferenceMode/index.module.scss
@@ -266,7 +266,7 @@
       display: flex;
       width: 100%;
       margin: -10px auto 0;
-      z-index: 1501;
+      z-index: 1500;
       height: 0;
     }
 
@@ -302,7 +302,7 @@
       bottom: 0;
       left: 0;
       margin: 0;
-      z-index: 1501 !important;
+      z-index: 1500 !important;
       border-radius: 0;
       height: auto;
       padding: 10px !important;
